Added scaffolding for Tasks component and fixed issue with using button.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,7 @@
 <div>
   Hello world!
 
-  <button pButton type="button" label="Click"></button>
+  <button pButton type="button" (click)="onclick()" label="Click"></button>
+
+  <tasks></tasks>
 </div>
